--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -12,3 +12,6 @@ startTime = StartTime
 endTime = EndTime
 createReservation = Create new reservation
 reservationPage = The Reservations page
+created = Created
+updated = Updated
+version = Version
