--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -12,3 +12,6 @@ startTime = DataRozpoczecia
 endTime = DataZakonczenia
 createReservation = Stworz nowa rezerwacje
 reservationPage = Strona rezerwacji
+created = Utworzono
+updated = Zaktualizowano
+version = Wersja
